--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -4,17 +4,17 @@
 
   <div>
     <label for="username">User name:</label>
-    <input type="text" name="username" id="username">
+    <input type="text" name="user[username]" id="username">
   </div>
 
   <div>
     <label for="email">Email:</label>
-    <input type="email" name="email" id="email">
+    <input type="email" name="user[email]" id="email">
   </div>
 
   <div>
     <label for="password">Password:</label>
-    <input type="password" name="password" id="password">
+    <input type="password" name="user[password]" id="password">
   </div>
 
   <div>
