--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -22,6 +22,7 @@
   </div>
 </form> %>
 
+<!--
 <%= form_tag('/users') do %>
   <div>
     <%= label_tag(:username, 'User name:') %>
@@ -40,5 +41,27 @@
 
   <div>
     <%= submit_tag('Submit') %>
+  </div>
+<% end %>
+-->
+
+<%= form_with model: @user do |form| %>
+  <div>
+    <%= form.label :username, 'Input your name:' %>
+    <%= form.text_field :username, value: 'Billy Bob' %>
+  </div>
+
+  <div>
+    <%= form.label :email, 'Input your e-mail:' %>
+    <%= form.email_field :email, placeholder: 'example@example.com' %>
+  </div>
+
+  <div>
+    <%= form.label :password, 'Input your password:' %>
+    <%= form.password_field :password %>
+  </div>
+
+  <div>
+    <%= form.submit 'Create user!' %>
   </div>
 <% end %>
