--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -46,6 +46,21 @@
 -->
 
 <%= form_with model: @user do |form| %>
+  <% if @user.errors.any? %>
+      <div>
+        <h2>
+          <%= pluralize(@user.errors.count, 'error') %>
+          prohibited this user from being saved:
+        </h2>
+
+        <ul>
+          <% @user.errors.each do |error| %>
+            <li><%= error.full_message %></li>
+          <% end %>
+        </ul>
+      </div>
+  <% end %>
+
   <div>
     <%= form.label :username, 'Input your name:' %>
     <%= form.text_field :username, value: 'Billy Bob' %>
